--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body style="background-color: #f9ffff">
+<a href="https://www.merriam-webster.com/" target="_blank">
 <img id="logo" src="/images/logo.png" alt="Marriam-webster logo" >
+</a>
 <nav>
     <div class="container mt-5">
         <h1 class="mb-4">Merriam-Webapp</h1>
@@ -28,7 +30,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" id="thesaurus-tab" data-toggle="tab" href="#thesaurus">Appearance</a>
+                    <a class="nav-link" id="thesaurus-tab" data-toggle="tab" href="#thesaurus">Thesaurus</a>
                 </li>
             </ul>
             <div class="tab-content mt-3">
@@ -58,7 +60,7 @@
                         </div>
                     </div>
                     <div class="form-check">
-                        <label for="DarkMode"></label><input class="form-check-input" type="checkbox" id="DarkMode">
+                        <label for="DarkMode"></label><input class="form-check-input" type="checkbox" id="DarkMode" checked>
                         <label class="form-check-label" for="showDefinitionsCheckbox">
                             Dark Mode
                         </label>
