crude search history

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #f9ffff">
 <a href="https://www.merriam-webster.com/" target="_blank">
-<img id="logo" src="/images/logo.png" alt="Marriam-webster logo" >
+    <img id="logo" src="/images/logo.png" alt="Marriam-webster logo" >
 </a>
 <nav>
     <div class="container mt-5">
@@ -17,6 +17,12 @@
     </div>
 </nav>
 <div class="container mt-5">
+    <!-- Search history section -->
+    <div class="mt-4">
+        <h4>Search History</h4>
+        <ul id="searchHistory"></ul>
+    </div>
+
     <div class="settings">
         <div class="container mt-5">
             <h1>App Settings</h1>
@@ -73,7 +79,7 @@
                 </div>
             </div>
         </div>
-        </div>
+    </div>
     <div class="form-group">
         <label for="wordInput">Enter a word:</label>
         <div class="input-group">
@@ -85,11 +91,9 @@
     </div>
 
     <div id="definitions" class="mt-4"></div>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
-
-</body>
-</html>
