extremely specific deleteSearchHistory

--- a/site/index.html
+++ b/site/index.html
@@ -85,7 +85,7 @@
         <div class="input-group">
             <input type="text" class="form-control" id="wordInput" placeholder="e.g., example">
             <div class="input-group-append">
-                <button class="btn btn-primary" onclick="lookupWord()">Lookup</button>
+                <button class="btn btn-primary" onclick="lookupWord(); deleteSearchHistory()">Lookup</button>
             </div>
         </div>
     </div>
