removed font size changer

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #f9ffff">
 <a href="https://www.merriam-webster.com/" target="_blank">
-    <img id="logo" src="/images/logo.png" alt="Marriam-webster logo" >
+    <img id="logo" src="/images/logo.png" alt="Merriam-webster logo" >
 </a>
 <nav>
     <div class="container mt-5">
@@ -59,12 +59,6 @@
 
                 <div class="tab-pane fade" id="appearance">
                     <h4>Appearance Settings</h4>
-                    <div class="Font Size">
-                        <label for="size-input"></label>
-                        <input class="text-input" type="text" id="size-input" placeholder="font size">
-                        <div class="input-group-append">
-                        </div>
-                    </div>
                     <div class="form-check">
                         <label for="DarkMode"></label><input class="form-check-input" type="checkbox" id="DarkMode" checked>
                         <label class="form-check-label" for="showDefinitionsCheckbox">
